--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <include src="./partials/modal-get-started.html"></include>
 
     
-    
+    <!--Файлы js-->
     <script src="./index.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/slider.js"></script>
